rust/crates/astra-cli/src/tui/table_view/snapshots/astra__tui__table_view__view__tests__table_empty_80x3.snap
---
source: crates/astra-cli/src/tui/table_view/view.rs
expression: "draw(&t, &n, 80, 3)"
---
┌ Table · 0 rows × 0 cols──────────────────────────────────────────────────────┐
│  no table data to show                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
