rust/crates/astra-cli/src/tui/table_view/snapshots/astra__tui__table_view__view__tests__table_narrow_50x8.snap
---
source: crates/astra-cli/src/tui/table_view/view.rs
expression: "draw(&t, &n, 50, 8)"
---
┌ Table · 3 rows × 3 cols · row 1/3──────────────┐
│id                                              │
│1                                               │
│2                                               │
│3                                               │
│                                                │
│  ↑ ↓ rows · ← → cols · q/Esc close             │
└────────────────────────────────────────────────┘
