rust/crates/astra-cli/src/tui/table_view/snapshots/astra__tui__table_view__view__tests__table_scrolled_right_60x8.snap
---
source: crates/astra-cli/src/tui/table_view/view.rs
assertion_line: 215
expression: "draw(&t, &n, 60, 8)"
---
┌ Table · 3 rows × 3 cols · row 1/3 · cols 2–3/3───────────┐
│name                     email                            │
│alice                    a@example.co                     │
│bob                      b@example.co                     │
│carol                    c@example.co                     │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
