rust/crates/astra-cli/src/tui/table_view/snapshots/astra__tui__table_view__view__tests__table_truncates_80x8.snap
---
source: crates/astra-cli/src/tui/table_view/view.rs
expression: "draw(&t, &n, 80, 8)"
---
┌ Table · 2 rows × 2 cols · row 1/2────────────────────────────────────────────┐
│id                       description                                          │
│1                        this is a very long str…                             │
│2                        and another equally ver…                             │
│                                                                              │
│                                                                              │
│  ↑ ↓ rows · ← → cols · q/Esc close                                           │
└──────────────────────────────────────────────────────────────────────────────┘
